<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Potato</string>
    <string name="activity_crossword">Crossword</string>
    <string name="new_crossword">New crossword</string>
    <string name="settings_action">Settings</string>
    <string name="github">GitHub</string>
    <string name="github_label">Potato on GitHub</string>
    <string name="new_label">New Crossword</string>
    <string name="clear_label">Clear</string>
    <string name="exit">Exit</string>
    <string name="resume">Resume</string>
    <string name="logo_descr">HotPotatoes Logo</string>
    <string name="hint_label">Hint</string>
    <string name="pref_storage_title">Storage</string>
    <string name="pref_summary_delete_cache">Remove all cached crosswords</string>
    <string name="pref_title_delete_cache">Clear cache</string>
    <string name="clear_cache_dialog_message">This will permanently delete the cached crosswords!</string>
    <string name="pref_about_title">About</string>
    <string name="about">About Potato</string>
    <string name="pref_summary_author">Nikolay Blagoev</string>
    <string name="pref_title_author">Author</string>
    <string name="pref_summary_version">1.0</string>
    <string name="pref_title_version">Version</string>
    <string name="activity_settings">Settings</string>
    <string name="pref_title_os_licenses">Open-source licenses</string>
    <string name="validate_label">Validate</string>
    <string name="pref_title_osl_wishlist">Wishlist</string>
    <string name="pref_summary_wishlist">by Alexander Blom \nApache License, Version 2.0</string>
    <string name="pref_title_osl_smoothprogressbar">SmoothProgressBar</string>
    <string name="pref_summary_smoothprogressbar">by Antoine Merle \nThe Beer-ware License</string>
    <string name="pref_summary_undobar">by Roman Nurik \nApache License, Version 2.0</string>
    <string name="pref_title_osl_undobar">UndoBar</string>
    <string name="pref_title_osl_actionbarsherlock">ActionBarSherlock</string>
    <string name="pref_summary_actionbarsherlock">by Jake Wharton \nApache License, Version 2.0</string>
    <string name="pref_summary_auto_resume">Automatically resume the last unsolved crossword on start</string>
    <string name="pref_title_auto_resume">Resume on start</string>
    <string name="pref_general_title">General</string>
    <string name="pref_title_cache_info">Cache</string>
    <string name="pref_summary_cache_info">Currently using %s</string>
    <string name="pref_summary_download_crosswords">Make all crosswords available offline</string>
    <string name="pref_title_download_crosswords">Download crosswords</string>
    <string name="OK">OK</string>
    <string name="BLANK"/>
    <string name="pref_title_auto_clue">Automatic clues</string>
    <string name="pref_summary_auto_clue">Show the clue bar when a word box is selected</string>
    <string name="pref_title_dropbox_sync">Dropbox</string>
    <string name="pref_sync_title">Sync</string>
    <string name="pref_title_vibrate_on">Vibrate on error</string>
    <string name="pref_summary_vibrate_on">Vibrate on validation if the crossword has incorrect answers</string>
    <string name="pref_dialog_title_clear_cache">Clear cache?</string>
    <string name="pref_dialog_title_clearing_cache">Clearing cache...</string>
    <string name="dialog_newcrossword_confirm">The current crossword is not solved. All progress will be lost!</string>
    <string name="dialog_newcrossword_confirm_title">Dismiss crossword?</string>
    <string name="pref_validation_title">Validation</string>
    <string name="pref_title_validate_onshake">Shake to validate</string>
    <string name="pref_summary_validate_onshake">Shake the device to check your answers</string>
    <string name="dialog_clear_data">Clearing the stored data....</string>
    <string name="dialog_clear_data_confirm_title">Delete data?</string>
    <string name="dialog_clear_data_confirm">You will loose all synced with Dropbox crossword data!</string>
    <string name="delete">Delete</string>

</resources>
