<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_customization_title"
        android:key="pref_key_storage_settings">

        <CheckBoxPreference
            android:key="auto_resume"
            android:summary="@string/pref_summary_auto_resume"
            android:title="@string/pref_title_auto_resume"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_storage_title"
        android:key="pref_key_storage_settings">

        <com.nikoblag.android.potato.preferences.ClearCachePreference
            android:key="pref_key_delete_cache"
            android:summary="@string/pref_summary_delete_cache"
            android:title="@string/pref_title_delete_cache"
            android:dialogMessage="@string/clear_cache_dialog_message"
            android:dialogTitle="@null"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_about_title"
        android:key="pref_key_about_settings">

        <PreferenceScreen
            android:key="button_about_category_key"
            android:title="@string/about"
            android:persistent="false">

            <PreferenceCategory
                android:title="@string/pref_about_title"
                android:key="pref_key_about_settings">

                <Preference
                    android:key="pref_key_author"
                    android:summary="@string/pref_summary_author"
                    android:title="@string/pref_title_author"/>

                <Preference
                    android:key="pref_key_version"
                    android:summary="@string/pref_summary_version"
                    android:title="@string/pref_title_version"/>

            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/pref_title_os_licenses"
                android:key="pref_key_os_licenses">

                <Preference
                    android:key="pref_key_osl_actionbarpulltorefresh"
                    android:title="@string/pref_title_osl_actionbarpulltorefresh"
                    android:summary="@string/pref_summary_actionbarpulltorefresh"/>

                <Preference
                    android:key="pref_key_osl_actionbarsherlock"
                    android:title="@string/pref_title_osl_actionbarsherlock"
                    android:summary="@string/pref_summary_actionbarsherlock"/>

                <Preference
                    android:key="pref_key_osl_smoothprogressbar"
                    android:title="@string/pref_title_osl_smoothprogressbar"
                    android:summary="@string/pref_summary_smoothprogressbar"/>

                <Preference
                    android:key="pref_key_osl_undobar"
                    android:title="@string/pref_title_osl_undobar"
                    android:summary="@string/pref_summary_undobar"/>

                <Preference
                    android:key="pref_key_osl_wishlist"
                    android:title="@string/pref_title_osl_wishlist"
                    android:summary="@string/pref_summary_wishlist"/>

            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
