<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/hint"
        android:icon="@drawable/ic_action_info"
        android:showAsAction="always"
        android:title="@string/hint_label"
        android:visible="true" />

    <item
        android:id="@+id/clear"
        android:icon="@drawable/ic_action_backspace"
        android:showAsAction="always"
        android:title="@string/clear_label"
        android:visible="true" />

    <item
        android:id="@+id/new_action"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/new_label"
        android:visible="true" />

    <item
        android:id="@+id/settings"
        android:showAsAction="never"
        android:title="@string/settings_action" />

    <item
        android:id="@+id/github"
        android:icon="@drawable/ic_action_github"
        android:showAsAction="ifRoom"
        android:title="@string/github_label"
        android:titleCondensed="@string/github"
        android:visible="true" />
</menu>
